--- a/src/assets/scss/_basics.scss
+++ b/src/assets/scss/_basics.scss
@@ -74,6 +74,14 @@
         font-size: 130px;
     }
 
+    .h3 {
+        font-size: 45px;
+    }
+
+    .h4 {
+        font-size: 30px;
+    }
+
    .h5 {
         font-size: 20px;
         letter-spacing: 3.38px;
@@ -88,6 +96,15 @@
 @media (max-width: 575.98px) { 
     .h1 {
         font-size: 100px;
+    }
+
+    .h3 {
+        font-size: 32px;
+        text-align: center;
+    }
+
+    .h4 {
+        font-size: 24px;
     }
 
     .h5 {
