--- a/src/assets/scss/_crew.scss
+++ b/src/assets/scss/_crew.scss
@@ -2,23 +2,26 @@
 
 #crew {
     background-image: url('../img/crew/background-crew-desktop.jpg');
-    @media (max-width: 991.98px){ 
+    min-width: 400px;
+    @media (min-width: 768px) and (max-width: 991.98px){ 
         background-image: url('../img/crew/background-crew-tablet.jpg');
+        height: -moz-fit-content;
+        height: fit-content;
+        overflow-y: auto;
     }
-    @media (max-width: 575.98px) {
+    @media (max-width: 767.98px) {
         background-image: url('../img/crew/background-crew-mobile.jpg');
+        height: -moz-fit-content;
+        height: fit-content;
+        overflow-y: auto;
     }
     background-size: cover;
     height: 100vh;
     overflow: hidden;
 
     .crew {
-        padding: 1rem 3rem 0rem 3rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        @media (max-width: 575.98px) {
-            padding: 1rem 2rem 2rem 2rem;
+        @media (max-width: 991.98px) {
+            padding: 0 2.5rem 0 2.5rem;
         } 
 
         .crew-content {
@@ -26,6 +29,18 @@
             justify-content: space-between;
             align-items: end;
             padding: 0 11vw;
+            @media (min-width: 768px) and (max-width: 991.98px){ 
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                padding: 0 4vw;
+            }
+            @media (max-width: 767.98px) {
+                flex-direction: column-reverse;
+                justify-content: center;
+                align-items: center;
+                padding: 0;
+            }
             
             .crew-member {
                 display: flex;
@@ -33,13 +48,28 @@
                 justify-content: center;
                 align-items: start;
                 gap: 5rem;
-                img {
-                    width: min-content;
-                    @media (max-width: 575.98px) {
-                        width: 100%;
-                        min-width: 300px;
+                animation: slideInLeft 1s ease-in-out;
+                @keyframes slideInLeft {
+                    0% {
+                        transform: translateX(-40%);
+                    }
+                    100% {
+                        transform: translateX(0);
                     }
                 }
+                
+                @media (min-width: 768px) and (max-width: 991.98px){ 
+                    margin-top: 2rem;
+                    align-items: center;
+                    gap: 2rem;
+                }
+                @media (max-width: 767.98px) {
+                    flex-direction: column-reverse;
+                    align-items: center;
+                    margin-top: 2rem;
+                    gap: 0;
+                }
+                
 
                 .crew-member-detail {
                     display: flex;
@@ -48,6 +78,14 @@
                     align-items: start;
                     width: 45vw;
                     gap: 1rem;
+                    @media (min-width: 768px) and (max-width: 991.98px){ 
+                        width: 100%;
+                        align-items: center;
+                    }
+                    @media (max-width: 767.98px) {
+                        align-items: center;
+                        width: 100%;
+                    }
 
                     h4.h4 {
                         margin: 0;
@@ -59,6 +97,14 @@
                     p.body-text {
                         width: 80%;
                         margin-top: 1rem;
+                        @media (min-width: 768px) and (max-width: 991.98px){ 
+                            width: 85%;
+                            text-align: center;
+                        }
+                        @media (max-width: 767.98px) {
+                            width: 100%;
+                            text-align: center;
+                        }
                     }   
                     
                 }
@@ -86,8 +132,33 @@
 
             img {
                 height: 590px;
-                @media (max-width: 575.98px) {
-                    width: 100%;
+                animation: slideInRight 1s ease-in-out;
+                @keyframes slideInRight {
+                    0% {
+                        transform: translateX(40%);
+                    }
+                    100% {
+                        transform: translateX(0);
+                    }
+                }
+                @media (min-width: 768px) and (max-width: 991.98px){ 
+                    height: 400px;
+                }
+                @media (max-width: 767.98px) {
+                    height: 300px;
+                    margin-top: 2rem;
+                }
+            }
+
+            hr {
+                width: 100%;
+                border: .3px solid rgba(255, 255, 255, 0.3137254902);;
+                height: 0px;
+                margin: 0;
+                display: none;
+
+                @media (max-width: 767.98px) {
+                    display: block;
                 }
             }
         }
