--- a/src/assets/scss/_pageTitle.scss
+++ b/src/assets/scss/_pageTitle.scss
@@ -14,7 +14,7 @@ h5.pageTitle {
     }
 
     @media (min-width: 768px) and (max-width: 991.98px){ 
-        padding: 4rem 0 0 0;
+        padding: 4rem 0 2rem 0;
     }
 
     @media (max-width: 767.98px) {
