--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -12,4 +12,5 @@ $h5: 28px 'Barlow Condensed', serif;
 $sh1: 28px 'Bellefair', serif;
 $sh2: 14px 'Barlow Condensed', sans-serif;
 $nav-text: 16px 'Barlow Condensed', sans-serif;
+$title-text: 18px 'Barlow Condensed', sans-serif;
 $body-text: 18px 'Barlow', sans-serif;
