--- a/src/assets/scss/_destination.scss
+++ b/src/assets/scss/_destination.scss
@@ -67,7 +67,7 @@
                             border-bottom: 2px solid variables.$accent;
                         }
 
-                        &:hover {
+                        &:not(.active):hover {
                             border-bottom: 2px solid #979797;
                         }
                     }
