--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -36,7 +36,7 @@
                 border-bottom: 2px solid variables.$accent;
             }
 
-            &:hover {
+            &:not(.active):hover {
                 border-bottom: 2px solid #979797;
             }
             
